add feature view note read-only mode

--- a/mobile/package.json
+++ b/mobile/package.json
@@ -15,8 +15,8 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
-    "@react-navigation/native": "^7.1.8",
-    "expo": "~54.0.32",
+    "@react-navigation/native": "^7.1.28",
+    "expo": "~54.0.33",
     "expo-auth-session": "^7.0.10",
     "expo-constants": "~18.0.13",
     "expo-file-system": "^19.0.21",
@@ -25,7 +25,7 @@
     "expo-image": "~3.0.11",
     "expo-linear-gradient": "^15.0.8",
     "expo-linking": "~8.0.11",
-    "expo-router": "~6.0.22",
+    "expo-router": "^6.0.23",
     "expo-secure-store": "^15.0.8",
     "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
