--- a/dekstop/package.json
+++ b/dekstop/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "electron": "^40.0.0",
     "react": "^19.2.3",
-    "react-dom": "^19.2.3"
+    "react-dom": "^19.2.3",
+    "react-markdown": "^10.1.0"
   },
   "devDependencies": {
     "@types/node": "^25.0.10",
