--- a/mobile/package.json
+++ b/mobile/package.json
@@ -39,9 +39,11 @@
     "react-native": "0.81.5",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-markdown-display": "^7.0.2",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-toast-message": "^2.3.3",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1"
   },
